# Stock

./: .env.example  .gitignore  README.md  can_slim.json  can_slim_china.json  can_slim_usa.json  institutional_accumulator_china.json  institutional_accumulator_usa.json  main.py  master_analyst_china.json  master_analyst_usa.json  pyproject.toml  sample_config.json  verify_report.py
config/: prompts.yaml  schemas.py  settings.py
data/: fmp_all_docs.txt
docs/: ARCHITECTURE.md  NEW_STRATEGIES.md  README.md  ROADMAP.md  TODO.md
docs/adr/: 001-use-openrouter-for-llm.md  002-fmp-for-market-data.md  003-native-batch-api-for-cost-efficiency.md  004-file-based-caching-with-datetime-suffix.md  005-uv-for-dependency-and-project-management.md  006-mplfinance-for-static-chart-generation.md  template.md
docs/fmp-api/: 30-minute-interval-stock-chart-api.md  5-minute-interval-stock-chart-api.md  articles-api.md  available-countries-api.md  available-exchanges-api.md  balance-sheet-statement-api.md  balance-statement-bulk-api.md  batch-market-cap-api.md  cash-flow-statement-api.md  company-peer-comparison-api.md  company-profile-bulk-api.md  company-profile-data-api.md  company-shares-float-liquidity-api.md  (+34 more)
notebooks/: analyze-reports.ipynb  clean-m30.ipynb  fmp-api.ipynb  llm-data.ipynb  night-effect.ipynb  open-router.ipynb  scrape-fmp-docs.ipynb  ticker_confidence_summary.csv
scripts/: nightly_scan.ps1  nightly_scan.sh
tests/: test_alpaca.py  test_charting.py  test_data_fetchers.py  test_openrouter.py  test_orchestrator.py  test_session_logger.py  verify_report.py
(+40 files in other folders)
