# pyproject.toml

[project]
name = "techno-quantamental-analyzer"
version = "0.1.0"
description = "Automated technofundamental stock screening pipeline using FMP and LLM Vision."
readme = "README.md"
authors = [{name = "Vincent Rothenberg"}]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "jupyter>=1.1.1",
    "mplfinance>=0.12.10b0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
